refactor: replace arraylist by linkedlist
https://stackoverflow.com/questions/322715/when-to-use-linkedlist-over-arraylist-in-java